# chargepal_monitor_gui

./: CMakeLists.txt  README.md  index.html  package.xml  pyproject.toml
cfg/: envi.toml  gui.yaml
chargepal_monitor_gui/: config.py  database.py  env_table_components.py  environment.py  gui_core.py  marimo_gui_env.py  marimo_gui_env_backup.py  marimo_gui_ldb.py  marimo_gui_logs.py  marimo_gui_pdb.py  run_gui.py
chargepal_monitor_gui/cfg/: envi.toml  gui_config.toml
chargepal_monitor_gui/scripts/: gui_core.py
js/: main.js
msg/: Cart.msg  Robot.msg
scripts/: config.py  env_table_components.py  environment.py  gui.py  gui_core.py  gui_util.py
srv/: readCartInfo.srv  readRobotInfo.srv  updateCartInfo.srv  updateRobotInfo.srv
