[project]
name = "chargepal-monitor-gui"
version = "0.1.0"
description = "Browser GUI for Monitoring the ChargePal Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.1.0",
    "toml>=0.10.2",
    "rich>=13.8.0",
    "marimo[sql]>=0.8.17",
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
